# kaido

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
crates/kaido-cli/: Cargo.toml
crates/kaido-cli/src/: cli.rs  main.rs  verify.rs  writer.rs
crates/kaido-cli/tests/: verification_e2e.rs
crates/kaido-core/: Cargo.toml
crates/kaido-core/src/: error.rs  lib.rs  wasm_api.rs
crates/kaido-core/src/features/: compose.rs  mod.rs  types.rs
crates/kaido-core/src/generator/: mod.rs  render.rs
crates/kaido-core/src/templates/: mod.rs
crates/kaido-mcp/: Cargo.toml
crates/kaido-mcp/src/: main.rs  tools.rs
scripts/: build-wasm.sh  check-public-artifacts.sh  template-security-matrix.sh
templates/base/: aiken.toml.tera  aikido.toml.tera
templates/custom/: types.ak.tera  validator.ak.tera
templates/dao_governance/: types.ak.tera  validator.ak.tera
templates/dex_pool/: types.ak.tera  validator.ak.tera
templates/escrow/: types.ak.tera  validator.ak.tera
templates/lending_pool/: types.ak.tera  validator.ak.tera
templates/multisig_treasury/: types.ak.tera  validator.ak.tera
templates/nft_marketplace/: types.ak.tera  validator.ak.tera
templates/oracle_settlement/: types.ak.tera  validator.ak.tera
templates/referral_system/: mint_validator.ak.tera  treasury_validator.ak.tera  types.ak.tera  validation.ak.tera
templates/sdk_base/: package.json.tera  tsconfig.json.tera
templates/simple_mint/: types.ak.tera  (+1 more)
web/: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
(+59 files in other folders)
