[package]
name = "kaido-mcp"
version = "0.1.0"
edition = "2021"
description = "Kaido MCP server — AI agent interface for Aiken smart contract generation"
license = "Apache-2.0"

[[bin]]
name = "kaido-mcp"
path = "src/main.rs"

[dependencies]
kaido-core = { path = "../kaido-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
